# Shakhtar-Donetsk

./: .gitignore  README.md  REPORT_PLAN.md  pyproject.toml
notebooks/: data.ipynb  passing_data.ipynb  passing_data_visualization.ipynb  shotmap.ipynb  xg_flow_chart.ipynb
soccerdata/config/: league_dict.json
sofascore/: individual_passing_stats.csv  team_passing_stats.csv
sofascore/data/: shotmap.json  statistics.json
